--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.26.10"
   },
   "devDependencies": {
     "@types/node": "^20",
